welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:14: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
  		if (y % 2 == 0 && x =6)
                               ^ZigZag:18: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
  	if (y % 2 == 1 && x = 0 )
                       ^